--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "bjorn",
-  "version": "0.0.8",
+  "version": "0.0.10",
   "description": "Björn is a JavaScript native array pattern matcher that uses predicates to find sequences within sequences. It gives you practical and no-bloat no-bullshit pattern matching over arrays.",
-  "lib": "lib.js",
+  "main": "./lib/index.js",
+  "types": "./lin/index.d.ts",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "jest && tsc"
   },
   "files":[
-    "lib/**"
+    "lib/**",
+    "typings.d.ts"
   ],
   "author": "Benjamin Babik",
   "license": "MIT",
