--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.10",
   "description": "Björn is a JavaScript native array pattern matcher that uses predicates to find sequences within sequences. It gives you practical and no-bloat no-bullshit pattern matching over arrays.",
   "main": "./lib/index.js",
-  "types": "./lin/index.d.ts",
+  "types": "./lib/index.d.ts",
   "scripts": {
     "test": "jest",
     "build": "jest && tsc"
